Fix tablet alignment on Person

--- a/working/style.css
+++ b/working/style.css
@@ -354,6 +354,7 @@ h2 {
         display: flex;
         align-items: flex-start;
         flex-shrink: 0;
+        text-align: left;
     }
 
     .person-image-circle {
